--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 click==6.7
+coverage==4.4.2
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+nose2==0.7.3
+six==1.11.0
 Werkzeug==0.13
